# emqjs

./: Cargo.toml  LICENSE  README.md  allow_undefined.list  build-runtime.sh  build.rs  build.sh  exported_funcs.list  index.mjs  package.json  pnpm-lock.yaml  run-example.sh  run.sh  temp.cpp  temp.js  temp.wasm
preprocess/: Cargo.toml  main.rs
preprocess/src/: main.rs
runtime/: Cargo.toml
runtime/src/: externs.rs  imports.rs  lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: data_structures.rs  imports.rs  lib.rs  main.rs  preprocess.rs  runtime.rs  runtime_imports.rs
src/preprocess/: bin.rs
src/runtime/: externs.rs  imports.rs  lib.rs
