[package]
name = "emqjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rkyv = { version = "0.7.41", features = ["archive_le"] }

[[bin]]
name = "emqjs_preprocess"
path = "src/preprocess.rs"

[lib]
name = "emqjs_runtime"
path = "src/runtime.rs"
crate-type = ["staticlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walrus = "0.19.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rquickjs = { version = "0.1.7", features = ["macro", "parallel"] }

[patch.crates-io]
rquickjs = { git = "https://github.com/RReverser/rquickjs", branch = "arraybuffer-view" }
