[package]
name = "emqjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
once_cell = "1.17.1"
rkyv = { version = "0.7.41", features = ["archive_le"] }
tracing = "0.1.37"
walrus = "0.20.1"

[[bin]]
name = "emqjs_preprocess"
path = "src/preprocess.rs"

[lib]
name = "emqjs_runtime"
path = "src/runtime.rs"
crate-type = ["staticlib"]

[target.'cfg(not(windows))'.dependencies]
rquickjs = { path = "../rquickjs", features = ["macro", "parallel"] }
