[package]
name = "emqjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
indexmap = "2.0.0"
once_cell = "1.17.1"
rkyv = { version = "0.7.41", features = ["archive_le"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walrus = "0.20.1"

[[bin]]
name = "emqjs_preprocess"
path = "src/preprocess/bin.rs"

[lib]
name = "emqjs_runtime"
path = "src/runtime/lib.rs"
crate-type = ["staticlib"]

[target.'cfg(not(windows))'.dependencies]
rquickjs = { git = "https://github.com/RReverser/rquickjs", branch = "wasi", features = ["macro"] }
